--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "riot-express-todo-list",
+  "name": "riot-express-todo-list-HO3",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
